chore: add friend links

--- a/layouts/shortcodes/contributors.html
+++ b/layouts/shortcodes/contributors.html
@@ -41,7 +41,7 @@
                 <img src="{{.avatar}}" class="card-img-top">
             </div>
 
-            <a href="{{.profile}}" class="col-md-8" target="_blank">
+            <a href="{{.profile}}?from=www.h1z3y3.me" class="col-md-8" target="_blank">
                 <div class="card-body">
                     <p class="card-text" style="margin: 0;">
                         {{ .display_name }}
