--- a/layouts/shortcodes/links.html
+++ b/layouts/shortcodes/links.html
@@ -1,4 +1,4 @@
-{{ define "contributor-card" }}
+{{ define "links-card" }}
 
 <style>
 
@@ -33,7 +33,7 @@
 
 <div class="card-group row">
 
-    {{ range .contributors }}
+    {{ range .links }}
 
     <div class="card col-md-6">
         <div class="row no-gutters">
@@ -59,5 +59,5 @@
 </div>
 {{ end }}
 
-{{ template "contributor-card" $.Site.Data.contributors }}
+{{ template "links-card" $.Site.Data.links }}
 
