--- a/layouts/shortcodes/links.html
+++ b/layouts/shortcodes/links.html
@@ -31,6 +31,9 @@
 
 </style>
 
+<br>
+<br>
+
 <div class="card-group row">
 
     {{ range .links }}
@@ -61,3 +64,6 @@
 
 {{ template "links-card" $.Site.Data.links }}
 
+{{ if .Site.Params.enableGitalk }}
+    <div id="gitalk-container"></div>
+{{ end }}
