feat: use submodule

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -9,3 +9,194 @@
 .container {
   padding: 0;
 }
+
+// _base.scss
+
+.main-inner {
+  margin: 0 auto;
+  display: block;
+}
+
+.icon {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  display: inline-block;
+}
+
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-contrast-low);
+  &:hover {
+    background-color: alpha(var(--color-primary), 0.5);
+  }
+  &:active {
+    background-color: alpha(var(--color-primary), 0.75);
+  }
+}
+::-webkit-scrollbar-corner {
+  background-color: var(--color-bg);
+}
+
+[data-align="justify"] {
+  .post-body {
+    p, li, dd {
+      text-align: justify;
+      text-justify: distribute;
+    }
+  }
+}
+
+// _post-nav.scss
+.post-nav-prev {
+  margin-right: auto;
+  max-width: 48%;
+}
+.post-nav-next {
+  margin-left: auto;
+  text-align: right;
+  max-width: 48%;
+}
+
+// _post-tags.scss
+.post-tags {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 90%;
+}
+
+// _updated-badge.scss
+.updated-badge-container {
+  margin-top: 2em;
+  text-align: center;
+}
+
+
+// _list.scss
+.list-item {
+  line-height: 1.1;
+  position: relative;
+  transition: border $duration;
+  margin-top: 1em;
+  padding-bottom: 0.5em;
+  display: block;
+  align-items: baseline;
+  text-align: center;
+  border: none;
+  list-style: none;
+  padding-left: -100px;
+  color: red;
+  &:hover {
+    border-bottom-color: var(--color-primary);
+    ::before {
+      background: var(--color-primary);
+    }
+  }
+  ::before {
+    content: "";
+    position: relative;
+    left: 0;
+    top: 0;
+    color: red;
+    width: 0;
+    height: $fontSize / 3;
+    background: var(--color-contrast-low);
+    transition: background $duration;
+    font-size: 1rem;
+  }
+}
+
+.list-item-title {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 21px;
+  font-weight: bold;
+  color: var(--color-contrast-high);
+  padding: 5px 0;
+  border-bottom: 1px dashed #aaa;
+  left: 0;
+  margin: 0;
+}
+
+.list-item-time {
+  margin: 0;
+  color: var(--color-contrast-high);
+  line-height: 1.5;
+  font-family: 'Merriweather', serif;
+  display: block;
+  font-size: 15px;
+  text-align: center;
+}
+
+
+@media (min-width: 600px) {
+  .list-item {
+    text-align: left;
+    padding-bottom: 0;
+  }
+
+  .list-item-title {
+    color: var(--color-contrast-high);
+    text-overflow: ellipsis;
+    max-width: calc(100% - 180px);
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 22px;
+  }
+
+  .list-item-time {
+    font-size: 19px;
+    text-align: right;
+    float: right;
+    color: var(--color-contrast-high);
+    padding: 5px 0;
+    margin-top: 5px;
+    display: block;
+  }
+
+}
+
+
+
+// _single.scss
+
+.e-content {
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    border-bottom: 2px solid #81a6ed;
+    box-shadow: inset 0 -3px 0 #4d85f1;
+    background: transparent;
+    transition: background 150ms ease;
+  }
+
+  a:hover,
+  a:focus {
+    background: rgba(160, 189, 248, 0.61);
+  }
+
+}
+.post {
+  p {
+    margin: 1em 0;
+    line-height: $lineHeight;
+    font-family: 'Merriweather', serif;;
+    letter-spacing: 1px;
+  }
+
+  p img {
+    border-radius: 12px;
+  }
+}
+
+.post-body {
+  margin-top: 2em !important;
+}
