--- a/themes/meme/layouts/partials/utils/list-item.html
+++ b/themes/meme/layouts/partials/utils/list-item.html
@@ -11,19 +11,19 @@
     {{- $pages = $pages | first $limit -}}
 {{- end -}}
 {{- with $pages -}}
-    <div class="list-part">
+    <ul class="list-part">
         {{ range . }}
-            <article class="list-item">
+            <li class="list-item">
                 <a href="{{ .RelPermalink }}" class="list-item-title">{{ (partial "utils/title.html" (dict "$" . "title" .LinkTitle)).htmlTitle }}</a>
                 <time datetime="{{ .PublishDate.Format "2006-01-02T15:04:05-07:00" }}" class="list-item-time">{{ .PublishDate.Format .Site.Params.listDateFormat }}</time>
-            </article>
+            </li>
         {{ end }}
         {{ if and (gt $limit 0) (gt (len $.Pages) $limit) }}
             {{ with $linkTarget }}
-                <article class="list-read-more">
+                <li class="list-read-more">
                     <a href="{{ $linkTarget.RelPermalink }}">{{ i18n "readMore" }} »</a>
-                </article>
+                </li>
             {{ end }}
         {{ end }}
-    </div>
+    </ul>
 {{ end }}
