--- a/layouts/shortcodes/emo.html
+++ b/layouts/shortcodes/emo.html
@@ -216,7 +216,7 @@
 
                     <div class="img-item"
                          style=";width: {{ $maxWidth }}%; max-height: {{$maxHeight}}px;">
-                        <img src="{{ $.Site.Params.blogImagePrefix }}{{ $value }}"
+                        <img data-src="{{ $.Site.Params.blogImagePrefix }}{{ $value }}"
                              class="img-thumbnail " alt="">
                     </div>
                     {{ end }}
@@ -234,3 +234,30 @@
 {{ range sort $.Site.Data.emo "date" "desc" }}
 {{ template "emo" (dict "$" $ "list" .list)}}
 {{ end }}
+
+<script>
+    // 图片懒加载
+    var imgs = document.querySelectorAll('img');
+    // offsetTop是元素与offsetParent的距离，循环获取直到页面顶部
+    function getTop(e) {
+        var T = e.offsetTop;
+        while(e = e.offsetParent) {
+            T += e.offsetTop;
+        }
+        return T;
+    }
+
+    function lazyLoad(imgs) {
+        var H = document.documentElement.clientHeight;//获取可视区域高度
+        var S = document.documentElement.scrollTop || document.body.scrollTop;
+        for (var i = 0; i < imgs.length; i++) {
+            if (H + S > getTop(imgs[i])) {
+                imgs[i].src = imgs[i].getAttribute('data-src');
+            }
+        }
+    }
+
+    window.onload = window.onscroll = function () { //onscroll()在滚动条滚动的时候触发
+        lazyLoad(imgs);
+    }
+</script>
