fix: gitalk color error

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -218,3 +218,8 @@
 .medium-zoom-image--opened {
   object-fit: scale-down;
 }
+
+// gitalk
+.gt-container .gt-header-textarea {
+  color: #16171C;
+}
